deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invoicers
  namespace: invoicers
spec:
  selector:
    app.kubernetes.io/name: invoicers
  ports:
    - name: http
      port: 80
      targetPort: http
