deploy/kubernetes/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invoicers
  namespace: invoicers
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - "invoicers.talos.froystein.jp"
  rules:
    - backendRefs:
        - name: invoicers
          port: 80
